posts added, styles fixed, about page added

--- a/source/categories.html
+++ b/source/categories.html
@@ -4,7 +4,8 @@ permalink: /categories/
 title: Categories
 description: "An archive of posts sorted by category."
 image:
-    feature: /images/threaded-blue-on-black.jpg
+  feature: /images/diary-bg20.jpg
+  background: colorflags-bg.jpg
 ---
 
 <ul class="entry-meta inline-list">
