--- a/source/posts.html
+++ b/source/posts.html
@@ -4,7 +4,8 @@ permalink: /posts/
 title: All Posts
 description: "An archive of posts."
 image:
-  feature: /images/threaded-blue-on-black-cropped.jpg
+  feature: /images/diary-bg20.jpg
+  background: colorflags-bg.jpg
 ---
 
 {% for post in site.posts %}
