--- a/source/index.html
+++ b/source/index.html
@@ -1,11 +1,13 @@
 ---
 layout: default
-title: A Tech Blog by Jake Zimmerman
-description: "A tech blog by Jake Zimmerman. Updates occaisonally with tips, tricks, and hacks that have helped me out."
-categories: [Jekyll, theme, themes, responsive, blog, modern, tech, hacks]
-keywords: Jekyll theme themes responsive blog modern tech hacks
+title: Fullstack Development w/ Javascript
+description: "Blog about javascript, nodejs, emberjs, backbone, requirejs, yeoman, phaser, web development, game development, and anything that is interesting about software."
+categories: [javascript, nodejs, emberjs, backbone, requirejs, yeoman, web-development, game-development]
+keywords: javascript nodejs emberjs backbone phaser requirejs yeoman web-development game-development
 image:
-  feature: /images/threaded-blue-on-black-cropped.jpg
+  feature: /images/diary-bg20.jpg
+  background: colorflags-bg.jpg
+
 ---
 
 {% assign index = true %}
