--- a/public/404.html
+++ b/public/404.html
@@ -40,7 +40,7 @@
 <!-- Open Graph -->
 <meta property="og:local" content="en_US">
 <meta property="og:type" content="article">
-<meta property="og:url" content="http://eguneys.github.io/404.html">
+<meta property="og:url" content="http://www.eguneys.com/404.html">
 <meta property="og:title" content="404 Not Found">
 <meta property="og:description" content="Blog about javascript, nodejs, emberjs, backbone, requirejs, yeoman, phaser, web development, game development, and anything that interests me about &hellip;">
 
@@ -48,7 +48,7 @@
 
 <meta property="og:site_name" content="Fullstack Development w/ Javascript">
 
-<link rel="canonical" href="http://eguneys.github.io/404.html">
+<link rel="canonical" href="http://www.eguneys.com/404.html">
 <link href="/favicon.png" rel="icon">
 <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
