gzip enabled title fixed

--- a/source/index.html
+++ b/source/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Fullstack Development w/ Javascript
-description: "Blog about javascript, nodejs, emberjs, backbone, requirejs, yeoman, phaser, web development, game development, and anything that is interesting about software."
+title: Welcome
+description: "Blog about javascript, web development, game development, and anything that is interesting about software."
 categories: [javascript, nodejs, emberjs, backbone, requirejs, yeoman, web-development, game-development]
 keywords: javascript nodejs emberjs backbone phaser requirejs yeoman web-development game-development
 image:
