tr language support added

--- a/source/index.tr.html
+++ b/source/index.tr.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: tr/default
 title: Hoşgeldin
 description: "Javascript blog, web yazılım, oyun yazılım, ve yazılım hakkında ilgimi çeken herşey."
 categories: [javascript, nodejs, emberjs, backbone, requirejs, yeoman, web-development, game-development]
