pacman instructions added

--- a/public/games/pacman-unicode/index.html
+++ b/public/games/pacman-unicode/index.html
@@ -140,6 +140,19 @@
   <div id="main" role="main">
     <link rel=stylesheet href=styles/db4badba.main.css> 
 
+<div>
+    <h2>
+        Pacman Unicode
+    </h2>
+    <p>
+        Use <b>W A S D</b> to move.
+    </p>
+    <p>
+        Built with <a href="http://baconjs.github.io/">baconjs</a> and
+        <a href="http://tapiov.net/unicodetiles.js/">unicodetiles</a>.
+        Find source code at <a href="https://github.com/eguneys/pacman-unicode">github</a>
+    </p>
+</div>
 <div class=game-area> </div> </div> 
 
 <script src=scripts/53fa885a.vendor.js></script> 
@@ -149,7 +162,7 @@
 
   <div class="footer-wrapper">
     <footer role="contentinfo">
-      <span>&copy; 2014 Emre Guneyler. Powered by <a href="http://octopress.org">Octopress</a> using the <a href="https://github.com/Z1MM32M4N/hpstr-theme/">HPSTR Theme for Octopress</a>.</span>
+      <span>&copy; 2015 Emre Guneyler. Powered by <a href="http://octopress.org">Octopress</a> using the <a href="https://github.com/Z1MM32M4N/hpstr-theme/">HPSTR Theme for Octopress</a>.</span>
 
     </footer>
   </div><!-- /.footer-wrapper -->
