pacman_unicode updated

--- a/source/games/pacman-unicode/index.html
+++ b/source/games/pacman-unicode/index.html
@@ -10,7 +10,21 @@ image:
 
 <link rel=stylesheet href=styles/db4badba.main.css> 
 
+<div>
+    <h2>
+        Pacman Unicode
+    </h2>
+    <p>
+        Use <b>W A S D</b> to move.
+    </p>
+    <p>
+        Built with <a href="http://baconjs.github.io/">baconjs</a> and
+        <a href="http://tapiov.net/unicodetiles.js/">unicodetiles</a>.
+        Find source code at <a href="https://github.com/eguneys/pacman-unicode">github</a>
+    </p>
+</div>
+
 <div class=game-area> </div> </div> 
 
 <script src=scripts/53fa885a.vendor.js></script> 
-<script src=scripts/200300af.main.js></script>  
+<script src=scripts/16aa69ed.main.js></script>  
